add header to HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>  
-    <h1>Hello</h1>
+    <!-- HEADER -->
+    
+    <header class="header">
+        <nav class="nav">
+            <img src="./images/logo.svg" alt="fylo-logo" class="logo nav__logo">
+            <ul class="nav__menu">
+                <li class="nav__item"><a class="nav__link" href="#">Features</a></li>
+                <li class="nav__item"><a class="nav__link" href="#">Team</a></li>
+                <li class="nav__item"><a class="nav__link" href="#">Sign In</a></li>
+            </ul>
+        </nav>
+        <div class="header__wrapper">
+            <img src="./images/illustration-intro.png" alt="image-intro" class="header__img">
+            <h1 class="heade__title">All your files in one secure location, accessible anywhere.</h1>
+            <p class="header__describe">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family and co-workers.
+            </p>
+            <button class="header__btn">Get Started</button>
+        </div>
+    </header>
+
 </body>
 </html>
