--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </nav>
         <div class="header__wrapper">
             <img src="./images/illustration-intro.png" alt="image-intro" class="header__img">
-            <h1 class="heade__title">All your files in one secure location, accessible anywhere.</h1>
-            <p class="header__describe">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family and co-workers.
+            <h1 class="header__title">All your files in one secure location,</br>accessible anywhere.</h1>
+            <p class="header__describe">Fylo stores all your most important files in one secure location.</br> Access them wherever you need, share and collaborate with</br> friends, family and co-workers.
             </p>
             <button class="header__btn">Get Started</button>
         </div>
