--- a/index.html
+++ b/index.html
@@ -28,5 +28,41 @@
         </div>
     </header>
 
+    <!-- FEATURES -->
+
+    <section class="features">
+        <div class="features__wrapper">
+            <div class="features__icon">
+                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <h3 class="fetaures__title">Access your files, anywhere</h3>
+                <p class="features__describe">
+                    The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
+                </p>
+            </div>
+            <div class="features__icon">
+                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <h3 class="fetaures__title">Access your files, anywhere</h3>
+                <p class="features__describe">
+                    The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
+                </p>
+            </div>
+            <div class="features__icon">
+                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <h3 class="fetaures__title">Access your files, anywhere</h3>
+                <p class="features__describe">
+                    The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
+                </p>
+            </div>
+            <div class="features__icon">
+                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <h3 class="fetaures__title">Access your files, anywhere</h3>
+                <p class="features__describe">
+                    The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
+                </p>
+            </div>
+
+        </div>
+    </section>
+
 </body>
 </html>
