fix problems with header in scss

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="header__wrapper">
-            <img src="./images/illustration-intro.png" alt="image-intro" class="header__img">
+            <img src="./images/illustration-intro.png" alt="image-intro" class="header__image-intro">
             <h1 class="header__title">All your files in one secure location,</br>accessible anywhere.</h1>
             <p class="header__describe">Fylo stores all your most important files in one secure location.</br> Access them wherever you need, share and collaborate with</br> friends, family and co-workers.
             </p>
@@ -33,33 +33,34 @@
     <section class="features">
         <div class="features__wrapper">
             <div class="features__icon">
-                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
                 <h3 class="fetaures__title">Access your files, anywhere</h3>
                 <p class="features__describe">
                     The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
                 <h3 class="fetaures__title">Access your files, anywhere</h3>
                 <p class="features__describe">
                     The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
                 <h3 class="fetaures__title">Access your files, anywhere</h3>
                 <p class="features__describe">
                     The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-phone.svg" alt="icon-phone" class="features__image">
+                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
                 <h3 class="fetaures__title">Access your files, anywhere</h3>
                 <p class="features__describe">
                     The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
                 </p>
             </div>
+           
 
         </div>
     </section>
