add icons and description to features

--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
     <section class="features">
         <div class="features__wrapper">
             <div class="features__icon">
-                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
+                <img src="./images/icon-access-anywhere.svg" alt="icon-access" class="features__image">
                 <h3 class="features__title">Access your files, anywhere</h3>
                 <p class="features__description">
                     The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
-                <h3 class="features__title">Access your files, anywhere</h3>
+                <img src="./images/icon-security.svg" alt="icon-security" class="features__image">
+                <h3 class="features__title">Security you can trust</h3>
                 <p class="features__description">
-                    The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
+                    2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
-                <h3 class="features__title">Access your files, anywhere</h3>
+                <img src="./images/icon-any-file.svg" alt="icon-any-file" class="features__image">
+                <h3 class="features__title">Store any type of file</h3>
                 <p class="features__description">
-                    The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
+                    Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-access-anywhere.svg" alt="icon-phone" class="features__image">
-                <h3 class="features__title">Access your files, anywhere</h3>
+                <img src="./images/icon-collaboration.svg" alt="icon-collaboration" class="features__image">
+                <h3 class="features__title">Real-time collaboration</h3>
                 <p class="features__description">
-                    The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
+                    Securely share folders with friends, family and colleagues for live collaboration. No email attachments required.
                 </p>
             </div>
            
