--- a/index.html
+++ b/index.html
@@ -33,35 +33,58 @@
     <section class="features">
         <div class="features__wrapper">
             <div class="features__icon">
-                <img src="./images/icon-access-anywhere.svg" alt="icon-access" class="features__image">
+                <div class='features__icon-wrapper'>
+                    <img src="./images/icon-access-anywhere.svg" alt="icon-access" class="features__image">
+                </div>
                 <h3 class="features__title">Access your files, anywhere</h3>
                 <p class="features__description">
                     The ability to use a smartphone, tablet or computer to access your account means your files follow you everywhere.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-security.svg" alt="icon-security" class="features__image">
+                <div class='features__icon-wrapper'>
+                    <img src="./images/icon-security.svg" alt="icon-security" class="features__image">
+                </div>
                 <h3 class="features__title">Security you can trust</h3>
                 <p class="features__description">
                     2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-any-file.svg" alt="icon-any-file" class="features__image">
+                <div class='features__icon-wrapper'>
+                    <img src="./images/icon-any-file.svg" alt="icon-any-file" class="features__image">
+                </div>
                 <h3 class="features__title">Store any type of file</h3>
                 <p class="features__description">
                     Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.
                 </p>
             </div>
             <div class="features__icon">
-                <img src="./images/icon-collaboration.svg" alt="icon-collaboration" class="features__image">
+                <div class='features__icon-wrapper'>
+                    <img src="./images/icon-collaboration.svg" alt="icon-collaboration" class="features__image">
+                </div>
                 <h3 class="features__title">Real-time collaboration</h3>
                 <p class="features__description">
                     Securely share folders with friends, family and colleagues for live collaboration. No email attachments required.
                 </p>
             </div>
-           
+        </div>
+    </section>
 
+    <!-- TEAM -->
+
+    <section class="team">
+        <div class="team__description-wrapper">
+            <img src="./images/illustration-stay-productive.png" alt="illustration-stay-productive" class="team__img">
+            <div class="team__description">
+                <h3 class="team__title">Stay productive, <br> wherever you are</h3>
+                <p class="team__description-text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+                <p class="team__description-text">Securely share folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+                <div class="team__link-wrapper">
+                    <a href="#" class="team__link">See how Fylo works </a>
+                    <img src="./images/icon-arrow.svg" alt="arrow" class="team__icon-arrow">
+                </div>
+            </div>
         </div>
     </section>
 
