--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <img src="./images/illustration-stay-productive.png" alt="illustration-stay-productive" class="team__img">
             <div class="team__description">
                 <h3 class="team__title">Stay productive, <br> wherever you are</h3>
-                <p class="team__description-text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
-                <p class="team__description-text">Securely share folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+                <p class="team__description-text">Never let location be an issue when accessing your files. Fylo has you<br> covered for all of your file storage needs.</p>
+                <p class="team__description-text">Securely share folders with friends, family and colleagues for live<br> collaboration. No email attachments required.</p>
                 <div class="team__link-wrapper">
                     <a href="#" class="team__link">See how Fylo works </a>
                     <img src="./images/icon-arrow.svg" alt="arrow" class="team__icon-arrow">
