--- a/index.html
+++ b/index.html
@@ -86,7 +86,23 @@
                 </div>
             </div>
         </div>
+        <div class="team__quotes-wrapper">
+            <div class="profile__quote">
+                <p class="profile__quote-description">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                .team
+            </div>
+            <div class="profile__info">
+                <div class="profile__img-wrapper">
+                    <img src="./images/profile-1.jpg" alt="" class="profile__img">
+                </div>
+                <div class="profile__info-wrapper">
+                    <h4 class="profile__name">Satish Patel</h4>
+                    <p class="profile__work">Founder & CEO, Huddle</p>
+                </div>
+            </div>
+        </div>
     </section>
+
 
 </body>
 </html>
