change pictures and info in profile

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="profile__info">
                     <div class="profile__img-wrapper">
-                        <img src="./images/profile-1.jpg" alt="" class="profile__img">
+                        <img src="./images/profile-1.jpg" alt="Satish Patel" class="profile__img">
                     </div>
                     <div class="profile__info-wrapper">
                         <h4 class="profile__name">Satish Patel</h4>
@@ -108,10 +108,10 @@
                 </div>
                 <div class="profile__info">
                     <div class="profile__img-wrapper">
-                        <img src="./images/profile-1.jpg" alt="" class="profile__img">
+                        <img src="./images/profile-2.jpg" alt="Bruce McKenzie" class="profile__img">
                     </div>
                     <div class="profile__info-wrapper">
-                        <h4 class="profile__name">Satish Patel</h4>
+                        <h4 class="profile__name">Bruce McKenzie</h4>
                         <p class="profile__work">Founder & CEO, Huddle</p>
                     </div>
                 </div>
@@ -122,17 +122,17 @@
                 </div>
                 <div class="profile__info">
                     <div class="profile__img-wrapper">
-                        <img src="./images/profile-1.jpg" alt="" class="profile__img">
+                        <img src="./images/profile-3.jpg" alt="Iva Boyd" class="profile__img">
                     </div>
                     <div class="profile__info-wrapper">
-                        <h4 class="profile__name">Satish Patel</h4>
+                        <h4 class="profile__name">Iva Boyd</h4>
                         <p class="profile__work">Founder & CEO, Huddle</p>
                     </div>
                 </div>
             </div>
         </div>
-        
     </section>
+    
 
 
 </body>
