--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fylo</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="./scss/style.css">
 </head>
 <body>  
@@ -132,8 +133,39 @@
             </div>
         </div>
     </section>
-    
 
+    <!-- FOOTER -->
 
+    <footer class="footer">
+        <div class="footer__location">
+            <p class="footer__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat cupiditate, architecto aliquid distinctio debitis quibusdam.</p>
+        </div>
+        <div class="footer__contact">
+            <div class="footer__contact-info">
+                <img src="./images/icon-phone.svg" alt="phone">
+                <p>+1-543-123-4567</p>
+            </div>
+            <div class="footer__contact-info">
+                <img src="./images/icon-email.svg" alt="email">
+                <p>example@fylo.com</p>
+            </div>
+        </div>
+        <div class="footer__links">
+            <a href="#" class="footer__link">About Us</a>
+            <a href="#" class="footer__link">Jobs</a>
+            <a href="#" class="footer__link">Press</a>
+            <a href="#" class="footer__link">Blog</a>
+        </div>
+        <div class="footer__links">
+            <a href="#" class="footer__link">Contact Us</a>
+            <a href="#" class="footer__link">Terms</a>
+            <a href="#" class="footer__link">Privacy</a>
+        </div>
+        <div class="footer__social-media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
