add scss to footer

--- a/index.html
+++ b/index.html
@@ -138,15 +138,18 @@
 
     <footer class="footer">
         <div class="footer__location">
-            <p class="footer__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat cupiditate, architecto aliquid distinctio debitis quibusdam.</p>
+            <div class="footer__icon-wrapper">
+                <img src="./images/icon-location.svg" alt="location" class="footer__icon-location">
+            </div>
+            <p class="footer__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, ea minus ducimus amet totam porro tenetur vel corporis eum eaque. Accusantium veniam repudiandae similique ea</p>
         </div>
         <div class="footer__contact">
             <div class="footer__contact-info">
-                <img src="./images/icon-phone.svg" alt="phone">
+                <img src="./images/icon-phone.svg" alt="phone" class="footer__contact-icon">
                 <p>+1-543-123-4567</p>
             </div>
             <div class="footer__contact-info">
-                <img src="./images/icon-email.svg" alt="email">
+                <img src="./images/icon-email.svg" alt="email" class="footer__contact-icon">
                 <p>example@fylo.com</p>
             </div>
         </div>
@@ -162,9 +165,9 @@
             <a href="#" class="footer__link">Privacy</a>
         </div>
         <div class="footer__social-media">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="footer__social-link"><i class="fab fa-facebook-f footer__social-icon" ></i></a>
+            <a href="#" class="footer__social-link"><i class="fab fa-twitter footer__social-icon"></i></a>
+            <a href="#" class="footer__social-link"><i class="fab fa-instagram footer__social-icon"></i></a>
         </div>
     </footer>
 </body>
