add scss to sign in

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 class="header__title">All your files in one secure location,</br>accessible anywhere.</h1>
             <p class="header__description">Fylo stores all your most important files in one secure location.</br> Access them wherever you need, share and collaborate with</br> friends, family and co-workers.
             </p>
-            <button class="header__btn">Get Started</button>
+            <button class="button">Get Started</button>
         </div>
     </header>
 
@@ -170,12 +170,12 @@
             <a href="#" class="footer__social-link"><i class="fab fa-instagram footer__social-icon"></i></a>
         </div>
 
-        <form action="#" class="form">
-            <h2 class="form__title">Get early access today</h2>
-            <p class="form__text">It only takes a minute to sign up and our free starter tier is extremly generous. If you have any questions, our support team would be happy to help you.</p>
-            <div class="form__wrapper">
-                <input type="email" class="form__input" required placeholder="email@example.com">
-                <button class="form__button" type="submit">Get Started For Free</button>
+        <form action="#" class="signIn">
+            <h2 class="signIn__title">Get early access today</h2>
+            <p class="signIn__text">It only takes a minute to sign up and our free starter tier is extremly generous. If you have any questions, our support team would be happy to help you.</p>
+            <div class="signIn__wrapper">
+                <input type="email" class="signIn__input" required placeholder="email@example.com">
+                <button class="button button--signIn" type="submit">Get Started For Free</button>
             </div>
         </form>
 
