--- a/index.html
+++ b/index.html
@@ -75,59 +75,61 @@
     <!-- TEAM -->
 
     <section class="team">
-        <div class="team__description-wrapper">
-            <img src="./images/illustration-stay-productive.png" alt="illustration-stay-productive" class="team__img">
-            <div class="team__description">
-                <h3 class="team__title">Stay productive, <br> wherever you are</h3>
-                <p class="team__description-text">Never let location be an issue when accessing your files. Fylo has you<br> covered for all of your file storage needs.</p>
-                <p class="team__description-text">Securely share folders with friends, family and colleagues for live<br> collaboration. No email attachments required.</p>
-                <div class="team__link-wrapper">
-                    <a href="#" class="team__link">See how Fylo works </a>
-                    <img src="./images/icon-arrow.svg" alt="arrow" class="team__icon-arrow">
-                </div>
-            </div>
-        </div>
-        
-        <div class="team__quotes-wrapper profile">
-            <div class="profile__wrapper">
-                <div class="profile__quote">
-                    <p class="profile__quote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-                </div>
-                <div class="profile__info">
-                    <div class="profile__img-wrapper">
-                        <img src="./images/profile-1.jpg" alt="Satish Patel" class="profile__img">
-                    </div>
-                    <div class="profile__info-wrapper">
-                        <h4 class="profile__name">Satish Patel</h4>
-                        <p class="profile__work">Founder & CEO, Huddle</p>
+        <div class="team__wrapper">
+            <div class="team__description-wrapper">
+                <img src="./images/illustration-stay-productive.png" alt="illustration-stay-productive" class="team__img">
+                <div class="team__description">
+                    <h3 class="team__title">Stay productive, <br> wherever you are</h3>
+                    <p class="team__description-text">Never let location be an issue when accessing your files. Fylo has you<br> covered for all of your file storage needs.</p>
+                    <p class="team__description-text">Securely share folders with friends, family and colleagues for live<br> collaboration. No email attachments required.</p>
+                    <div class="team__link-wrapper">
+                        <a href="#" class="team__link">See how Fylo works </a>
+                        <img src="./images/icon-arrow.svg" alt="arrow" class="team__icon-arrow">
                     </div>
                 </div>
             </div>
-            <div class="profile__wrapper">
-                <div class="profile__quote">
-                    <p class="profile__quote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-                </div>
-                <div class="profile__info">
-                    <div class="profile__img-wrapper">
-                        <img src="./images/profile-2.jpg" alt="Bruce McKenzie" class="profile__img">
+            
+            <div class="team__quotes-wrapper profile">
+                <div class="profile__wrapper">
+                    <div class="profile__quote">
+                        <p class="profile__quote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     </div>
-                    <div class="profile__info-wrapper">
-                        <h4 class="profile__name">Bruce McKenzie</h4>
-                        <p class="profile__work">Founder & CEO, Huddle</p>
+                    <div class="profile__info">
+                        <div class="profile__img-wrapper">
+                            <img src="./images/profile-1.jpg" alt="Satish Patel" class="profile__img">
+                        </div>
+                        <div class="profile__info-wrapper">
+                            <h4 class="profile__name">Satish Patel</h4>
+                            <p class="profile__work">Founder & CEO, Huddle</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="profile__wrapper">
-                <div class="profile__quote">
-                    <p class="profile__quote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-                </div>
-                <div class="profile__info">
-                    <div class="profile__img-wrapper">
-                        <img src="./images/profile-3.jpg" alt="Iva Boyd" class="profile__img">
+                <div class="profile__wrapper">
+                    <div class="profile__quote">
+                        <p class="profile__quote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     </div>
-                    <div class="profile__info-wrapper">
-                        <h4 class="profile__name">Iva Boyd</h4>
-                        <p class="profile__work">Founder & CEO, Huddle</p>
+                    <div class="profile__info">
+                        <div class="profile__img-wrapper">
+                            <img src="./images/profile-2.jpg" alt="Bruce McKenzie" class="profile__img">
+                        </div>
+                        <div class="profile__info-wrapper">
+                            <h4 class="profile__name">Bruce McKenzie</h4>
+                            <p class="profile__work">Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile__wrapper">
+                    <div class="profile__quote">
+                        <p class="profile__quote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                    </div>
+                    <div class="profile__info">
+                        <div class="profile__img-wrapper">
+                            <img src="./images/profile-3.jpg" alt="Iva Boyd" class="profile__img">
+                        </div>
+                        <div class="profile__info-wrapper">
+                            <h4 class="profile__name">Iva Boyd</h4>
+                            <p class="profile__work">Founder & CEO, Huddle</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -137,38 +139,40 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <div class="footer__location">
-            <div class="footer__icon-wrapper">
-                <img src="./images/icon-location.svg" alt="location" class="footer__icon-location">
+        <img src="./images/logo.svg" alt="fylo-logo" class="logo footer__logo">
+        <div class="footer__wrapper">
+            <div class="footer__location">
+                <div class="footer__icon-wrapper">
+                    <img src="./images/icon-location.svg" alt="location" class="footer__icon-location">
+                </div>
+                <p class="footer__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, ea minus ducimus amet totam porro tenetur vel corporis eum eaque. Accusantium veniam repudiandae similique ea</p>
             </div>
-            <p class="footer__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, ea minus ducimus amet totam porro tenetur vel corporis eum eaque. Accusantium veniam repudiandae similique ea</p>
-        </div>
-        <div class="footer__contact">
-            <div class="footer__contact-info">
-                <img src="./images/icon-phone.svg" alt="phone" class="footer__contact-icon">
-                <p>+1-543-123-4567</p>
+            <div class="footer__contact">
+                <div class="footer__contact-info">
+                    <img src="./images/icon-phone.svg" alt="phone" class="footer__contact-icon">
+                    <p>+1-543-123-4567</p>
+                </div>
+                <div class="footer__contact-info">
+                    <img src="./images/icon-email.svg" alt="email" class="footer__contact-icon">
+                    <p>example@fylo.com</p>
+                </div>
             </div>
-            <div class="footer__contact-info">
-                <img src="./images/icon-email.svg" alt="email" class="footer__contact-icon">
-                <p>example@fylo.com</p>
+            <div class="footer__links">
+                <a href="#" class="footer__link">About Us</a>
+                <a href="#" class="footer__link">Jobs</a>
+                <a href="#" class="footer__link">Press</a>
+                <a href="#" class="footer__link">Blog</a>
             </div>
-        </div>
-        <div class="footer__links">
-            <a href="#" class="footer__link">About Us</a>
-            <a href="#" class="footer__link">Jobs</a>
-            <a href="#" class="footer__link">Press</a>
-            <a href="#" class="footer__link">Blog</a>
-        </div>
-        <div class="footer__links">
-            <a href="#" class="footer__link">Contact Us</a>
-            <a href="#" class="footer__link">Terms</a>
-            <a href="#" class="footer__link">Privacy</a>
-        </div>
-        <div class="footer__social-media">
-            <a href="#" class="footer__social-link"><i class="fab fa-facebook-f footer__social-icon" ></i></a>
-            <a href="#" class="footer__social-link"><i class="fab fa-twitter footer__social-icon"></i></a>
-            <a href="#" class="footer__social-link"><i class="fab fa-instagram footer__social-icon"></i></a>
-        </div>
+            <div class="footer__links">
+                <a href="#" class="footer__link">Contact Us</a>
+                <a href="#" class="footer__link">Terms</a>
+                <a href="#" class="footer__link">Privacy</a>
+            </div>
+            <div class="footer__social-media">
+                <a href="#" class="footer__social-link"><i class="fab fa-facebook-f footer__social-icon" ></i></a>
+                <a href="#" class="footer__social-link"><i class="fab fa-twitter footer__social-icon"></i></a>
+                <a href="#" class="footer__social-link"><i class="fab fa-instagram footer__social-icon"></i></a>
+            </div>
 
         <form action="#" class="signIn">
             <h2 class="signIn__title">Get early access today</h2>
@@ -178,6 +182,7 @@
                 <button class="button button--signIn" type="submit">Get Started For Free</button>
             </div>
         </form>
+        </div>
 
     </footer>
 </body>
