add media queries

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             
             <div class="team__quotes-wrapper profile">
                 <div class="profile__wrapper">
+                    <img src="./images/bg-quotes.png" alt="quotes" class="profile__quote-image">
                     <div class="profile__quote">
                         <p class="profile__quote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     </div>
@@ -139,8 +140,11 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <img src="./images/logo.svg" alt="fylo-logo" class="logo footer__logo">
+        
         <div class="footer__wrapper">
+            <div class="footer__logo-wrapper">
+                <img src="./images/logo.svg" alt="fylo-logo" class="logo footer__logo">
+            </div>
             <div class="footer__location">
                 <div class="footer__icon-wrapper">
                     <img src="./images/icon-location.svg" alt="location" class="footer__icon-location">
@@ -174,16 +178,15 @@
                 <a href="#" class="footer__social-link"><i class="fab fa-instagram footer__social-icon"></i></a>
             </div>
 
-        <form action="#" class="signIn">
-            <h2 class="signIn__title">Get early access today</h2>
-            <p class="signIn__text">It only takes a minute to sign up and our free starter tier is extremly generous. If you have any questions, our support team would be happy to help you.</p>
-            <div class="signIn__wrapper">
-                <input type="email" class="signIn__input" required placeholder="email@example.com">
-                <button class="button button--signIn" type="submit">Get Started For Free</button>
-            </div>
-        </form>
+            <form action="#" class="signIn">
+                <h2 class="signIn__title">Get early access today</h2>
+                <p class="signIn__text">It only takes a minute to sign up and our free starter tier is extremly generous. If you have any questions, our support team would be happy to help you.</p>
+                <div class="signIn__wrapper">
+                    <input type="email" class="signIn__input" required placeholder="email@example.com">
+                    <button class="button button--signIn" type="submit">Get Started For Free</button>
+                </div>
+            </form>
         </div>
-
     </footer>
 </body>
 </html>
