add hover effects and scroll behavior

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav class="nav">
             <img src="./images/logo.svg" alt="fylo-logo" class="logo nav__logo">
             <ul class="nav__menu">
-                <li class="nav__item"><a class="nav__link" href="#">Features</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Team</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Sign In</a></li>
+                <li class="nav__item"><a class="nav__link" href="#features">Features</a></li>
+                <li class="nav__item"><a class="nav__link" href="#team">Team</a></li>
+                <li class="nav__item"><a class="nav__link" href="#signIn">Sign In</a></li>
             </ul>
         </nav>
         <div class="header__wrapper">
@@ -31,7 +31,7 @@
 
     <!-- FEATURES -->
 
-    <section class="features">
+    <section class="features" id="features">
         <div class="features__wrapper">
             <div class="features__icon">
                 <div class='features__icon-wrapper'>
@@ -74,7 +74,7 @@
 
     <!-- TEAM -->
 
-    <section class="team">
+    <section class="team" id="team">
         <div class="team__wrapper">
             <div class="team__description-wrapper">
                 <img src="./images/illustration-stay-productive.png" alt="illustration-stay-productive" class="team__img">
@@ -178,7 +178,7 @@
                 <a href="#" class="footer__social-link"><i class="fab fa-instagram footer__social-icon"></i></a>
             </div>
 
-            <form action="#" class="signIn">
+            <form action="#" class="signIn" id="signIn">
                 <h2 class="signIn__title">Get early access today</h2>
                 <p class="signIn__text">It only takes a minute to sign up and our free starter tier is extremly generous. If you have any questions, our support team would be happy to help you.</p>
                 <div class="signIn__wrapper">
